--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,35 +42,6 @@ jobs:
           # 0100 = meson64 stuff (fixed version), boards I own first, then others
           # 0200 = uefi stuff (fixed version)
           # 0500+ other stuff
-          - aa: 0002
-            board: jetson-nano
-            desc: jetson-nano, cli, edge # media kernel
-            runnerLabel: armbian-arm64-media
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0004
-            board: tritium-h3
-            desc: tritium-h3, current, cli
-            runnerLabel: armbian-armhf-sunxi
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0005
-            board: tritium-h3
-            desc: tritium-h3, edge, cli
-            runnerLabel: armbian-armhf-sunxi
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 00009
-            board: tritium-h5
-            desc: tritium-h5, current, cli
-            runnerLabel: armbian-armhf-sunxi64
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 00010
-            board: tritium-h5
-            desc: tritium-h5, edge, cli
-            runnerLabel: armbian-armhf-sunxi64
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0019
             board: uefi-arm64
@@ -86,6 +57,12 @@ jobs:
             vars: "CLOUD_IMAGE=no BRANCH=ddk"
 
           # 0100 = meson64 stuff (fixed version), boards I own first, then others
+          - aa: 0112
+            board: bananapi-m2s
+            desc: BananaPi-M2S, edge, regular CLI
+            runnerLabel: armbian-arm64-meson64
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
           - aa: 0115
             board: odroidn2
             desc: ODROID N2+, edge, regular CLI
@@ -328,6 +305,37 @@ jobs:
             desc: nanopct4, Desktop gnome, edge # uses media kernel
             runnerLabel: armbian-arm64-media
             vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=browsers DESKTOP_ENVIRONMENT=gnome DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          # Sunxi, Sunxi64 and jetson-nano
+          - aa: 0951
+            board: jetson-nano
+            desc: jetson-nano, cli, edge # media kernel
+            runnerLabel: armbian-arm64-media
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0955
+            board: tritium-h3
+            desc: tritium-h3, current, cli
+            runnerLabel: armbian-armhf-sunxi
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
+          - aa: 0960
+            board: tritium-h3
+            desc: tritium-h3, edge, cli
+            runnerLabel: armbian-armhf-sunxi
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0965
+            board: tritium-h5
+            desc: tritium-h5, current, cli
+            runnerLabel: armbian-armhf-sunxi64
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
+          - aa: 0970
+            board: tritium-h5
+            desc: tritium-h5, edge, cli
+            runnerLabel: armbian-armhf-sunxi64
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
     steps:
 
