--- a/.github/workflows/main-to-docker-latest.yml
+++ b/.github/workflows/main-to-docker-latest.yml
@@ -1,10 +1,8 @@
 name: main-to-docker-latest
 
 on:
-  #push:
-  #  branches: [ main ]
   schedule:
-    - cron: '0 3 * * *' # Scheduled runs every day at 3am UTC
+    - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
 
 jobs:
@@ -69,8 +67,9 @@ jobs:
         run: |
           bash ./compile.sh generate-dockerfile
 
-      - name: Build and push ${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}}
-        id: docker_build
+      - name: Build and push ${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}} (first try)
+        id: docker_build_first
+        continue-on-error: true
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -87,6 +86,35 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
           cache-from: type=gha # all-automatic Github Actions caching
-          cache-to: type=gha,mode=max
+          cache-to: type=gha,mode=min # Minimal caching exports only the final layer, no intermediates
+          tags: ghcr.io/${{ github.repository }}:armbian-next-${{env.DOCKERFILE_OS}}-${{env.DOCKERFILE_RELEASE}}-latest
+
+      - name: sleep a random amount of seconds, up to 60, if build/push failed, before trying again
+        if: steps.docker_build_first.outcome == 'failure'
+        run: |
+          echo "::notice os=${{env.DOCKERFILE_OS}},release=${{env.DOCKERFILE_RELEASE}}::Build/push failed, retrying"
+          sleep $((RANDOM % 60))
+
+      - name: Build and push again (second try if first failed)
+        id: docker_build_second
+        if: steps.docker_build_first.outcome == 'failure'
+        continue-on-error: false # let the build break if the two tries fail
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64 # arm64 is done under qemu and is _very_ slow. Thanks, GitHub!
+          pull: false # Don't pull when retrying
+          push: true
+          labels: |
+            org.opencontainers.image.title=${{ github.repository }}
+            org.opencontainers.image.description=${{ github.event.repository.description }}
+            org.opencontainers.image.url=${{ github.event.repository.html_url }}
+            org.opencontainers.image.source=${{ github.event.repository.clone_url }}
+            org.opencontainers.image.created=${{ steps.prep.outputs.created }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
+          #cache-from: type=gha # do NOT reload cache when retrying
+          cache-to: type=gha,mode=min # Minimal caching exports only the final layer, no intermediates
           tags: ghcr.io/${{ github.repository }}:armbian-next-${{env.DOCKERFILE_OS}}-${{env.DOCKERFILE_RELEASE}}-latest
 
