add very early initial uboot artifact build on self-hosted; change to n2 with single target

--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false # let other jobs try to complete if one fails
       matrix:
         include:
-          - board: "odroidhc4"
+          - board: "odroidn2"
             branch: "edge"
             runner_tag: "armbian-arm64-meson64"
             variant: "" # empty
