--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -50,7 +50,7 @@ jobs:
           bash ./compile.sh artifact WHAT=uboot \
             "BRANCH=${{env.BRANCH}}" "BOARD=${{env.BOARD}}" ${{env.VARIANT}} \
             SHARE_LOG=yes \
-            OCI_TARGET_BASE="ghcr.io/${{ github.repository }}/uboot-${{env.BOARD}}-${{env.BRANCH}}"
+            OCI_TARGET_BASE="ghcr.io/${{ github.repository }}/"
 
       #- name: Push u-boot to ghcr.io ${{env.BOARD}}:${{env.BRANCH}} (variant ${{env.VARIANT}})
       #  id: upload-ghcr
