artifacts -> oci --> release --> try 4, with two u-boots

--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -15,6 +15,10 @@ jobs:
             branch: "edge"
             runner_tag: "armbian-arm64-meson64"
             variant: "" # empty
+          - board: "khadas-vim3l"
+            branch: "edge"
+            runner_tag: "armbian-arm64-meson64"
+            variant: "" # empty
     runs-on: [ "self-hosted", "Linux", 'armbian', "${{ matrix.runner_tag }}" ]
     env:
       BOARD: "${{ matrix.board }}"
