--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
 
-  "U":
+  "u-boot":
     if: ${{ github.repository_owner == 'rpardini' }}
     strategy:
       fail-fast: false # let other jobs try to complete if one fails
@@ -20,7 +20,7 @@ jobs:
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
             variant: "" # empty
     runs-on: "${{ matrix.runner_tags }}"
-    name: "U: ${{ matrix.board }}:${{ matrix.branch }} (variant ${{ matrix.variant }})"
+    name: "${{ matrix.board }} ${{ matrix.branch }} (${{ matrix.variant }})"
     env:
       BOARD: "${{ matrix.board }}"
       BRANCH: "${{ matrix.branch }}"
